--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@ html {
   background: url(./images/default-bg.jpg) no-repeat center center fixed;
   background-size: cover;
 }
+* {
+  box-sizing: border-box;
+}
 h1,
 h2,
 h3,
