--- a/src/components/CardBanner.css
+++ b/src/components/CardBanner.css
@@ -1,6 +1,13 @@
 .card-banner {
   width: 100%;
   height: 300px;
-  background-color: rgba(58, 58, 58, 0.767);
-  box-shadow: -3px -3px 9px rgba(0, 0, 0, 0.38);
+  /* background-color: rgba(58, 58, 58, 0.767); */
+  /* box-shadow: -3px -3px 9px rgba(0, 0, 0, 0.38); */
+  overflow: scroll;
+  white-space: nowrap;
+}
+.weather-card__container {
+  display: inline-block;
+  height: 100%;
+  padding: 10px 5px;
 }
