--- a/src/components/WeatherCard.css
+++ b/src/components/WeatherCard.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 15px;
-  height: 100%;
+  height: 200px;
   border-radius: 3px;
   background-color: rgba(58, 58, 58, 0.767);
   box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.3);
