--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,15 @@ li {
 
 .main-section {
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  overflow: scroll;
+  justify-content: center;
+  padding-bottom: 210px;
+}
+
+@media screen and (max-width: 700px) {
+  .main-section {
+    padding-bottom: 125px;
+  }
 }
