--- a/src/components/CardBanner.css
+++ b/src/components/CardBanner.css
@@ -1,10 +1,9 @@
 .card-banner {
   width: 100%;
-  height: 300px;
-  /* background-color: rgba(58, 58, 58, 0.767); */
-  /* box-shadow: -3px -3px 9px rgba(0, 0, 0, 0.38); */
   overflow: scroll;
   white-space: nowrap;
+  position: fixed;
+  bottom: 0;
 }
 .weather-card__container {
   display: inline-block;
