--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -59,6 +59,11 @@
   font-size: 3rem;
   margin: 20px 0;
 }
+@media screen and (max-width: 700px) {
+  .hero__city {
+    margin: 0;
+  }
+}
 
 .hero__country {
   font-size: 1.5rem;
