--- a/src/components/WeatherCard.css
+++ b/src/components/WeatherCard.css
@@ -9,3 +9,9 @@
   background-color: rgba(58, 58, 58, 0.767);
   box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.3);
 }
+
+@media screen and (max-width: 700px) {
+  .weather-card {
+    height: auto;
+  }
+}
